sdk/v0.5.1/string.mdx
---
title: "string"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/string.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.string


Pixeltable UDFs for `StringType`.
It closely follows the Pandas `pandas.Series.str` API.

Example:
```python
import pixeltable as pxt

t = pxt.get_table(...)
t.select(t.str_col.capitalize()).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; capitalize()

```python Signature
capitalize(self: pxt.String) -> String
```

Return string with its first character capitalized and the rest lowercased.

Equivalent to [`str.capitalize()`](https://docs.python.org/3/library/stdtypes.html#str.capitalize).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; casefold()

```python Signature
casefold(self: pxt.String) -> String
```

Return a casefolded copy of string.

Equivalent to [`str.casefold()`](https://docs.python.org/3/library/stdtypes.html#str.casefold).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; center()

```python Signature
center(
    self: pxt.String,
    width: pxt.Int,
    fillchar: pxt.String = ' '
) -> String
```

Return a centered string of length `width`.

Equivalent to [`str.center()`](https://docs.python.org/3/library/stdtypes.html#str.center).

**Parameters:**

- **`width`** (`pxt.Int`): Total width of the resulting string.
- **`fillchar`** (`pxt.String`): Character used for padding.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; contains()

```python Signature
contains(
    self: pxt.String,
    substr: pxt.String,
    case: pxt.Bool = True
) -> Bool
```

Test if string contains a substring.


**Parameters:**

- **`substr`** (`pxt.String`): string literal or regular expression
- **`case`** (`pxt.Bool`): if False, ignore case


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; contains_re()

```python Signature
contains_re(
    self: pxt.String,
    pattern: pxt.String,
    flags: pxt.Int = 0
) -> Bool
```

Test if string contains a regular expression pattern.


**Parameters:**

- **`pattern`** (`pxt.String`): regular expression pattern
- **`flags`** (`pxt.Int`): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; count()

```python Signature
count(
    self: pxt.String,
    pattern: pxt.String,
    flags: pxt.Int = 0
) -> Int
```

Count occurrences of pattern or regex.


**Parameters:**

- **`pattern`** (`pxt.String`): string literal or regular expression
- **`flags`** (`pxt.Int`): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; endswith()

```python Signature
endswith(self: pxt.String, substr: pxt.String) -> Bool
```

Return `True` if the string ends with the specified suffix, otherwise return `False`.

Equivalent to [`str.endswith()`](https://docs.python.org/3/library/stdtypes.html#str.endswith).

**Parameters:**

- **`substr`** (`pxt.String`): string literal


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; fill()

```python Signature
fill(self: pxt.String, width: pxt.Int) -> String
```

Wraps the single paragraph in string, and returns a single string containing the wrapped paragraph.

Equivalent to [`textwrap.fill()`](https://docs.python.org/3/library/textwrap.html#textwrap.fill).

**Parameters:**

- **`width`** (`pxt.Int`): Maximum line width.
- **`kwargs`** (`Any`): Additional keyword arguments to pass to `textwrap.fill()`.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; find()

```python Signature
find(
    self: pxt.String,
    substr: pxt.String,
    start: pxt.Int = 0,
    end: pxt.Int | None = None
) -> Int
```

Return the lowest index in string where `substr` is found within the slice `s[start:end]`.

Equivalent to [`str.find()`](https://docs.python.org/3/library/stdtypes.html#str.find).

**Parameters:**

- **`substr`** (`pxt.String`): substring to search for
- **`start`** (`pxt.Int`): slice start
- **`end`** (`pxt.Int | None`): slice end


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; findall()

```python Signature
findall(
    self: pxt.String,
    pattern: pxt.String,
    flags: pxt.Int = 0
) -> Json
```

Find all occurrences of a regular expression pattern in string.

Equivalent to [`re.findall()`](https://docs.python.org/3/library/re.html#re.findall).

**Parameters:**

- **`pattern`** (`pxt.String`): regular expression pattern
- **`flags`** (`pxt.Int`): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; format()

```python Signature
format(self: pxt.String) -> String
```

Perform string formatting.

Equivalent to [`str.format()`](https://docs.python.org/3/library/stdtypes.html#str.format).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; fullmatch()

```python Signature
fullmatch(
    self: pxt.String,
    pattern: pxt.String,
    case: pxt.Bool = True,
    flags: pxt.Int = 0
) -> Bool
```

Determine if string fully matches a regular expression.

Equivalent to [`re.fullmatch()`](https://docs.python.org/3/library/re.html#re.fullmatch).

**Parameters:**

- **`pattern`** (`pxt.String`): regular expression pattern
- **`case`** (`pxt.Bool`): if False, ignore case
- **`flags`** (`pxt.Int`): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; index()

```python Signature
index(
    self: pxt.String,
    substr: pxt.String,
    start: pxt.Int = 0,
    end: pxt.Int | None = None
) -> Int
```

Return the lowest index in string where `substr` is found within the slice `[start:end]`.
Raises ValueError if `substr` is not found.

Equivalent to [`str.index()`](https://docs.python.org/3/library/stdtypes.html#str.index).

**Parameters:**

- **`substr`** (`pxt.String`): substring to search for
- **`start`** (`pxt.Int`): slice start
- **`end`** (`pxt.Int | None`): slice end


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isalnum()

```python Signature
isalnum(self: pxt.String) -> Bool
```

Return `True` if all characters in the string are alphanumeric and there is at least one character, `False`
otherwise.

Equivalent to [`str.isalnum()`](https://docs.python.org/3/library/stdtypes.html#str.isalnum


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isalpha()

```python Signature
isalpha(self: pxt.String) -> Bool
```

Return `True` if all characters in the string are alphabetic and there is at least one character, `False` otherwise.

Equivalent to [`str.isalpha()`](https://docs.python.org/3/library/stdtypes.html#str.isalpha).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isascii()

```python Signature
isascii(self: pxt.String) -> Bool
```

Return `True` if the string is empty or all characters in the string are ASCII, `False` otherwise.

Equivalent to [`str.isascii()`](https://docs.python.org/3/library/stdtypes.html#str.isascii).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isdecimal()

```python Signature
isdecimal(self: pxt.String) -> Bool
```

Return `True` if all characters in the string are decimal characters and there is at least one character, `False`
otherwise.

Equivalent to [`str.isdecimal()`](https://docs.python.org/3/library/stdtypes.html#str.isdecimal).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isdigit()

```python Signature
isdigit(self: pxt.String) -> Bool
```

Return `True` if all characters in the string are digits and there is at least one character, `False` otherwise.

Equivalent to [`str.isdigit()`](https://docs.python.org/3/library/stdtypes.html#str.isdigit).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isidentifier()

```python Signature
isidentifier(self: pxt.String) -> Bool
```

Return `True` if the string is a valid identifier according to the language definition, `False` otherwise.

Equivalent to [`str.isidentifier()`](https://docs.python.org/3/library/stdtypes.html#str.isidentifier)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; islower()

```python Signature
islower(self: pxt.String) -> Bool
```

Return `True` if all cased characters in the string are lowercase and there is at least one cased character,
`False` otherwise.

Equivalent to [`str.islower()`](https://docs.python.org/3/library/stdtypes.html#str.islower)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isnumeric()

```python Signature
isnumeric(self: pxt.String) -> Bool
```

Return `True` if all characters in the string are numeric characters, `False` otherwise.

Equivalent to [`str.isnumeric()`](https://docs.python.org/3/library/stdtypes.html#str.isnumeric)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isspace()

```python Signature
isspace(self: pxt.String) -> Bool
```

Return `True` if there are only whitespace characters in the string and there is at least one character,
`False` otherwise.

Equivalent to [`str.isspace()`](https://docs.python.org/3/library/stdtypes.html#str.isspace)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; istitle()

```python Signature
istitle(self: pxt.String) -> Bool
```

Return `True` if the string is a titlecased string and there is at least one character, `False` otherwise.

Equivalent to [`str.istitle()`](https://docs.python.org/3/library/stdtypes.html#str.istitle)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; isupper()

```python Signature
isupper(self: pxt.String) -> Bool
```

Return `True` if all cased characters in the string are uppercase and there is at least one cased character,
`False` otherwise.

Equivalent to [`str.isupper()`](https://docs.python.org/3/library/stdtypes.html#str.isupper)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; join()

```python Signature
join(sep: pxt.String, elements: pxt.Json) -> String
```

Return a string which is the concatenation of the strings in `elements`.

Equivalent to [`str.join()`](https://docs.python.org/3/library/stdtypes.html#str.join)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; len()

```python Signature
len(self: pxt.String) -> Int
```

Return the number of characters in the string.

Equivalent to [`len(str)`](https://docs.python.org/3/library/functions.html#len)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; ljust()

```python Signature
ljust(
    self: pxt.String,
    width: pxt.Int,
    fillchar: pxt.String = ' '
) -> String
```

Return the string left-justified in a string of length `width`.

Equivalent to [`str.ljust()`](https://docs.python.org/3/library/stdtypes.html#str.ljust)

**Parameters:**

- **`width`** (`pxt.Int`): Minimum width of resulting string; additional characters will be filled with character defined in
    `fillchar`.
- **`fillchar`** (`pxt.String`): Additional character for filling.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; lower()

```python Signature
lower(self: pxt.String) -> String
```

Return a copy of the string with all the cased characters converted to lowercase.

Equivalent to [`str.lower()`](https://docs.python.org/3/library/stdtypes.html#str.lower)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; lstrip()

```python Signature
lstrip(
    self: pxt.String,
    chars: pxt.String | None = None
) -> String
```

Return a copy of the string with leading characters removed. The `chars` argument is a string specifying the set of
characters to be removed. If omitted or `None`, whitespace characters are removed.

Equivalent to [`str.lstrip()`](https://docs.python.org/3/library/stdtypes.html#str.lstrip)

**Parameters:**

- **`chars`** (`pxt.String | None`): The set of characters to be removed.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; match()

```python Signature
match(
    self: pxt.String,
    pattern: pxt.String,
    case: pxt.Bool = True,
    flags: pxt.Int = 0
) -> Bool
```

Determine if string starts with a match of a regular expression


**Parameters:**

- **`pattern`** (`pxt.String`): regular expression pattern
- **`case`** (`pxt.Bool`): if False, ignore case
- **`flags`** (`pxt.Int`): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; normalize()

```python Signature
normalize(self: pxt.String, form: pxt.String) -> String
```

Return the Unicode normal form.

Equivalent to [`unicodedata.normalize()`](https://docs.python.org/3/library/unicodedata.html#unicodedata.normalize)

**Parameters:**

- **`form`** (`pxt.String`): Unicode normal form (`'NFC'`, `'NFKC'`, `'NFD'`, `'NFKD'`)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; pad()

```python Signature
pad(
    self: pxt.String,
    width: pxt.Int,
    side: pxt.String = 'left',
    fillchar: pxt.String = ' '
) -> String
```

Pad string up to width


**Parameters:**

- **`width`** (`pxt.Int`): Minimum width of resulting string; additional characters will be filled with character defined in
    `fillchar`.
- **`side`** (`pxt.String`): Side from which to fill resulting string (`'left'`, `'right'`, `'both'`)
- **`fillchar`** (`pxt.String`): Additional character for filling


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; partition()

```python Signature
partition(self: pxt.String, sep: pxt.String = ' ') -> Json
```

Splits string at the first occurrence of `sep`, and returns 3 elements containing the part before the
separator, the separator itself, and the part after the separator. If the separator is not found, return 3 elements
containing string itself, followed by two empty strings.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; removeprefix()

```python Signature
removeprefix(self: pxt.String, prefix: pxt.String) -> String
```

Remove prefix. If the prefix is not present, returns string.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; removesuffix()

```python Signature
removesuffix(self: pxt.String, suffix: pxt.String) -> String
```

Remove suffix. If the suffix is not present, returns string.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; repeat()

```python Signature
repeat(self: pxt.String, n: pxt.Int) -> String
```

Repeat string `n` times.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; replace()

```python Signature
replace(
    self: pxt.String,
    substr: pxt.String,
    repl: pxt.String,
    n: pxt.Int | None = None
) -> String
```

Replace occurrences of `substr` with `repl`.

Equivalent to [`str.replace()`](https://docs.python.org/3/library/stdtypes.html#str.replace).

**Parameters:**

- **`substr`** (`pxt.String`): string literal
- **`repl`** (`pxt.String`): replacement string
- **`n`** (`pxt.Int | None`): number of replacements to make (if `None`, replace all occurrences)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; replace_re()

```python Signature
replace_re(
    self: pxt.String,
    pattern: pxt.String,
    repl: pxt.String,
    n: pxt.Int | None = None,
    flags: pxt.Int = 0
) -> String
```

Replace occurrences of a regular expression pattern with `repl`.

Equivalent to [`re.sub()`](https://docs.python.org/3/library/re.html#re.sub).

**Parameters:**

- **`pattern`** (`pxt.String`): regular expression pattern
- **`repl`** (`pxt.String`): replacement string
- **`n`** (`pxt.Int | None`): number of replacements to make (if `None`, replace all occurrences)
- **`flags`** (`pxt.Int`): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; reverse()

```python Signature
reverse(self: pxt.String) -> String
```

Return a reversed copy of the string.

Equivalent to `str[::-1]`.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; rfind()

```python Signature
rfind(
    self: pxt.String,
    substr: pxt.String,
    start: pxt.Int | None = 0,
    end: pxt.Int | None = None
) -> Int
```

Return the highest index where `substr` is found, such that `substr` is contained within `[start:end]`.

Equivalent to [`str.rfind()`](https://docs.python.org/3/library/stdtypes.html#str.rfind).

**Parameters:**

- **`substr`** (`pxt.String`): substring to search for
- **`start`** (`pxt.Int | None`): slice start
- **`end`** (`pxt.Int | None`): slice end


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; rindex()

```python Signature
rindex(
    self: pxt.String,
    substr: pxt.String,
    start: pxt.Int | None = 0,
    end: pxt.Int | None = None
) -> Int
```

Return the highest index where `substr` is found, such that `substr` is contained within `[start:end]`.
Raises ValueError if `substr` is not found.

Equivalent to [`str.rindex()`](https://docs.python.org/3/library/stdtypes.html#str.rindex).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; rjust()

```python Signature
rjust(
    self: pxt.String,
    width: pxt.Int,
    fillchar: pxt.String = ' '
) -> String
```

Return the string right-justified in a string of length `width`.

Equivalent to [`str.rjust()`](https://docs.python.org/3/library/stdtypes.html#str.rjust).

**Parameters:**

- **`width`** (`pxt.Int`): Minimum width of resulting string.
- **`fillchar`** (`pxt.String`): Additional character for filling.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; rpartition()

```python Signature
rpartition(self: pxt.String, sep: pxt.String = ' ') -> Json
```

This method splits string at the last occurrence of `sep`, and returns a list containing the part before the
separator, the separator itself, and the part after the separator.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; rstrip()

```python Signature
rstrip(
    self: pxt.String,
    chars: pxt.String | None = None
) -> String
```

Return a copy of string with trailing characters removed.

Equivalent to [`str.rstrip()`](https://docs.python.org/3/library/stdtypes.html#str.rstrip).

**Parameters:**

- **`chars`** (`pxt.String | None`): The set of characters to be removed. If omitted or `None`, whitespace characters are removed.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; slice()

```python Signature
slice(
    self: pxt.String,
    start: pxt.Int | None = None,
    stop: pxt.Int | None = None,
    step: pxt.Int | None = None
) -> String
```

Return a slice.


**Parameters:**

- **`start`** (`pxt.Int | None`): slice start
- **`stop`** (`pxt.Int | None`): slice end
- **`step`** (`pxt.Int | None`): slice step


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; slice_replace()

```python Signature
slice_replace(
    self: pxt.String,
    start: pxt.Int | None = None,
    stop: pxt.Int | None = None,
    repl: pxt.String | None = None
) -> String
```

Replace a positional slice with another value.


**Parameters:**

- **`start`** (`pxt.Int | None`): slice start
- **`stop`** (`pxt.Int | None`): slice end
- **`repl`** (`pxt.String | None`): replacement value


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; startswith()

```python Signature
startswith(self: pxt.String, substr: pxt.String) -> Int
```

Return `True` if string starts with `substr`, otherwise return `False`.

Equivalent to [`str.startswith()`](https://docs.python.org/3/library/stdtypes.html#str.startswith).

**Parameters:**

- **`substr`** (`pxt.String`): string literal


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; strip()

```python Signature
strip(
    self: pxt.String,
    chars: pxt.String | None = None
) -> String
```

Return a copy of string with leading and trailing characters removed.

Equivalent to [`str.strip()`](https://docs.python.org/3/library/stdtypes.html#str.strip).

**Parameters:**

- **`chars`** (`pxt.String | None`): The set of characters to be removed. If omitted or `None`, whitespace characters are removed.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; swapcase()

```python Signature
swapcase(self: pxt.String) -> String
```

Return a copy of string with uppercase characters converted to lowercase and vice versa.

Equivalent to [`str.swapcase()`](https://docs.python.org/3/library/stdtypes.html#str.swapcase).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; title()

```python Signature
title(self: pxt.String) -> String
```

Return a titlecased version of string, i.e. words start with uppercase characters, all remaining cased characters
are lowercase.

Equivalent to [`str.title()`](https://docs.python.org/3/library/stdtypes.html#str.title).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; upper()

```python Signature
upper(self: pxt.String) -> String
```

Return a copy of string converted to uppercase.

Equivalent to [`str.upper()`](https://docs.python.org/3/library/stdtypes.html#str.upper).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; wrap()

```python Signature
wrap(self: pxt.String, width: pxt.Int) -> Json
```

Wraps the single paragraph in string so every line is at most `width` characters long.
Returns a list of output lines, without final newlines.

Equivalent to [`textwrap.fill()`](https://docs.python.org/3/library/textwrap.html#textwrap.fill).

**Parameters:**

- **`width`** (`pxt.Int`): Maximum line width.
- **`kwargs`** (`Any`): Additional keyword arguments to pass to `textwrap.fill()`.

